# lib/module/v1/onlineServices/onlineServiceModel.js
@@ -6,8 +6,8 @@ var Schema = mongoose.Schema;
 var Account;
 
 var OnlineServiceSchema = new Schema({
-    serviceId: {
-        type: Schema.Types.ObjectId,
+    serviceType: {
+        type: Number,
         ref: constants.DB_MODEL_REF.SERVICE,
         default:null
     },
