# lib/module/v1/onlineServices/onlineServiceRoute.js
@@ -33,6 +33,32 @@ router
     }
   );
 
+
+  
+  // NmoxDAKItELqt4b3qtGl5ArwmpegfvOlspsHqvyfSzcUr0iNeWxNwdiZlbq9brd4
+  // 639c0f8a05451bddf3f884a0
+  router
+  .route("/applyFedoraCash")
+  .post(
+    [middleware.authenticate.autntctTkn],
+    function (req, res) {
+      var { serviceId, remark ,amount , accountNumber} = req.body;
+      let { userType, userId } = req.user;
+      onlineServiceFacade
+        .applyFedoraCash({
+          serviceId,
+          userId,
+          remark,
+          userType,amount,accountNumber
+        })
+        .then(function (result) {
+          resHndlr.sendSuccess(res, result, req);
+        })
+        .catch(function (err) {
+          resHndlr.sendError(res, err, req);
+        });
+    }
+  );
 router
   .route("/list")
   .get([middleware.authenticate.autntctTkn], function (req, res) {
